formatted main-nav to flex; aligned header left; gave h1 a margin of -.20rem to fix glyph alignment

--- a/style.css
+++ b/style.css
@@ -17,8 +17,12 @@ html {
 
 header {
   background-color: #a3b59f;
-  text-align: center;
+  text-align: left;
   padding: 1rem;
+}
+
+.main-nav {
+  display: flex
 }
 
 #content-nav-items li {
@@ -30,6 +34,7 @@ header {
 h1 {
   font-family: trajan-sans-pro, "Trebuchet MS", Verdana, sans-serif;
   font-size: 2rem;
+  margin-left: -.20rem;
 }
 
 h2 {
